# tinynn

./: .gitignore  CMakeLists.txt  README.md  allocator.cpp  allocator.h  c_api.cpp  c_api.h  cpu.cpp  cpu.h  cuda_util.h  datareader.cpp  datareader.h  gpu.cpp  gpu.h  layer.cpp  layer.h  layer_declaration.h  layer_registry.h  layer_type.h  layer_type_enum.h  main.cpp  mat.cpp  mat.h  modelbin.cpp  modelbin.h  option.cpp  option.h  padding.cpp  padding.h  paramdict.cpp  paramdict.h
layer/: absval.cpp  absval.h  cast.cpp  cast.h  convolution.cpp  convolution.h  innerproduct.cpp  innerproduct.h  padding.cpp  padding.h
layer/cuda/: CMakeLists.txt  absval_cuda.cpp  absval_cuda.cu  absval_cuda.h  convolution_cuda.cpp  convolution_cuda.cu  convolution_cuda.h  innerproduct_cuda.cpp  innerproduct_cuda.cu  innerproduct_cuda.h  padding_cuda.cpp  padding_cuda.cu  padding_cuda.h  test_cuda.cu  test_cuda.h
tests/: prng.h  test_absval.cpp  test_absval.h  test_innerproduct.cpp  test_innerproduct.h  test_padding.cpp  test_padding.h  testutil.h
